--- a/CMT/sod3/README
+++ b/CMT/sod3/README
@@ -20,17 +20,20 @@ The density ratio across the diaphragm is 8.
 
    "profiles/cmt/" containing datasets "u", "d" and "T" for velocity, density
    and temperature from CMT-nek, and the following datasets
-   "mumax"   : maximum viscosity, determined by maximum wave speed in an element
-   "artdiff" : artificial mass diffusivity nu_s in the Guermond-Popov stress tensor
-               the artificial viscosity coefficient is 4/3*nu_s
-   "resid"   : raw entropy residual at each GLL point along the bottom of each element.
+   "mu"   : artificial first viscosity coefficient
+   "lambda" : artificial second viscosity coefficient such that bulk viscosity=
+              mu+2/3*lambda
+   "kappa": artificial thermal conductivity
 
     the solution files contain these variables in
-    s1 : nu_s 
-    s2 : "mumax"
-    s3 : "artdiff"
-    s4 : nu_s with one less smoothing operation
-    s5 : "resid" raw entroppy residual
+    s1 : density 
+    s2 : "mu"
+    s3 : "kappa"
+    s4 : "lambda"
+
+    limiters are stored in 
+    s5 : theta, the limiter for density positivity
+    s6 : epsilon, the limiter for internal energy positivity (experimental)
 
 =====
 NOTE:
@@ -38,5 +41,7 @@ NOTE:
 
  - The highest Courant number I've gotten to work for this case is 0.3.
 
- - The tunable parameter in the EVM, 'c_sub_e' is set to 40.0 in usrdat2.
- - The tunable parameter in the EVM, 'c_max' is set to 0.3 in usrdat2.
+ - The tunable parameters in the artificial viscosity are set in uservp to:
+      cmu=0.025
+      cbeta=5.0
+      ckappa=0.01
